k8s-yamls/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
   - host: akopitsa.application.com
     http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: application
                port: 
                  number: 80
